# cpp_project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.obsPaths  README.md  conanfile.txt
libraries/MyLibrary/: CMakeLists.txt
libraries/MyLibrary/src/: MyLibrary.cpp  MyLibrary.h
src/: main.cpp
